--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -8,21 +8,21 @@
 
 
 <body>
-  <h1>Some famous Computer Scientists</h1>
-  <div>{{data}}</div>
-
+  <h1>Welcome back {{session.name}}</h1>
+  <br>
+  <h2>Check out friends near {{session.home_name}}:</h2>
   <div>
     {% for n in data %}
-    <div>{{n}}</div>
+    <div><h3>* {{n}}</h3></div>
     {% endfor %}
   </div>
+  <br>
+  <br>
 
-<p><a href="/another">Go to the other page</a></p>
-
-<form method="POST" action="/add">
-<p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
-</form>
-
+  <p><a href="/trip">Planning A Trip?</a></p>
+  <p><a href="/">Search other cities</a></p>
+  <p><a href="/friends">Search friends</a></p>
+  <p><a href="/recommendations">Recommendations</a></p>
 </body>
 
 
