distance function working
- had to convert degrees to radians and then apply functions

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -29,8 +29,8 @@
         {% for row in data %}
         <tr>
             <td>{{row[0]}}</td>
-            <td>BLAH</td>
-            <td>20km</td>
+            <td>{{row[1]}}</td>
+            <td>{{row[2]}} miles</td>
         </tr>
       </table>
       {% endfor %}
