add/remove friends functionality

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -38,9 +38,9 @@
     <br>
     <br>
 
-    <p><a href="/trip">Planning A Trip?</a></p>
-    <p><a href="/">Search other cities</a></p>
-    <p><a href="/friends">Search friends</a></p>
+    <p><a href="/trip">View / Plan a trip?</a></p>
+    <p><a href="/activity">Add activites</a></p>
+    <p><a href="/friend">Find a friend</a></p>
     <p><a href="/recommendations">Recommendations</a></p>
   </body>
 </html>
