--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -40,7 +40,8 @@
 
     <p><a href="/trip">View / Plan a trip?</a></p>
     <p><a href="/activity">Add activites</a></p>
-    <p><a href="/friend">Find a friend</a></p>
-    <p><a href="/recommendations">Recommendations</a></p>
+    <p><a href="/friend">Manage friends</a></p>
+    <p><a href="/review">Reviews</a></p>
+    <p><a href="/rental">Rentals</a></p>
   </body>
 </html>
