--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -38,6 +38,7 @@
     <br>
     <br>
 
+    <p><a href="/location">View / Add locations?</a></p>
     <p><a href="/trip">View / Plan a trip?</a></p>
     <p><a href="/activity">Add activites</a></p>
     <p><a href="/friend">Manage friends</a></p>
