--- a/webserver/templates/signup.html
+++ b/webserver/templates/signup.html
@@ -16,7 +16,9 @@
       <p>Password: <input type="password" name="password"></p>
       <p>Name: <input type="text" name="name"></p>
       <p>Profile Picture URL: <input type="text" name="profilepic"></p>
-      <p>Home ID: <input type="text" name="home"></p>
+      <p>Home ID: <input type="text" name="home"> 
+        <a href="/location">Create a home</a>
+      </p>
       <p><input type="submit" value="Create account"></p>
   </form>
 </div>
