--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -42,7 +42,7 @@
     <p><a href="/trip">View / Plan a trip?</a></p>
     <p><a href="/activity">Add activites</a></p>
     <p><a href="/friend">Manage friends</a></p>
-    <p><a href="/review">Reviews</a></p>
+    <p><a href="/reviews">Reviews</a></p>
     <p><a href="/rental">Rentals</a></p>
   </body>
 </html>
