--- a/webserver/templates/reviews.html
+++ b/webserver/templates/reviews.html
@@ -19,13 +19,25 @@
         <p><input type="submit" value="Logout"></p>
       </form>
     </div>
-    <h1>Review {{data[1]}}</h1>
+    <h1>Rentals</h1>
+    <h2>Available rentals:</h2>
     <div>
-        <form method="POST" action="/reviewsubmit/{{data[0]}}">
-            <p>Rating: <input type="number" name="rating"></p>
-            <p>Comment: <input type="text" name="comment"></p>
-            <p><input type="submit" value="Add review"></p>
-        </form>
+      <table style="width:500px">
+          <tr>
+              <th>Location</th>
+              <th>User</th>
+              <th>Rating</th>
+              <th>Comment</th>
+          </tr>
+          {% for review in reviews %}
+          <tr>
+              <td>{{review[0]}}</td>
+              <td>{{review[1]}}</td>
+              <td>{{review[2]}}</td>
+              <td>{{review[3]}}</td>
+          </tr>
+          {% endfor %}
+      </table>
     </div>
     <br>
   </body>
