requests completed, final commit :+1:

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -44,5 +44,6 @@
     <p><a href="/friend">Manage friends</a></p>
     <p><a href="/reviews">Reviews</a></p>
     <p><a href="/rental">Rentals</a></p>
+    <p><a href="/requests">View requests</a></p>
   </body>
 </html>
